--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,300;0,400;0,700;1,700&display=swap"
+      rel="stylesheet"
+    />
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&display=swap" rel="stylesheet">
     <!--Import materialize.css-->
     <link
       type="text/css"
@@ -17,25 +22,25 @@
     <link rel="stylesheet" href="css/style.css" />
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Aldhiya Tama Solusi</title>
+    <title>Undangan Digital</title>
   </head>
 
   <body>
     <!-- navbar menu -->
     <div class="navbar-fixed">
-      <nav class="blue darken-2">
+      <nav class="pink darken-2">
         <div class="container">
           <div class="nav-wrapper">
-            <a href="#slider" class="brand-logo">Aldhiya Tama Solusi</a>
+            <a href="#slider" class="brand-logo"> B & D</a>
             <a href="#" data-target="mobile-nav" class="sidenav-trigger"
               ><i class="material-icons">menu</i></a
             >
             <ul class="right hide-on-med-and-down">
-              <li><a href="#about">About Us</a></li>
-              <li><a href="#clients">Clients</a></li>
-              <li><a href="#services">Services</a></li>
-              <li><a href="#portfolio">Portfolio</a></li>
-              <li><a href="#contact">Contact Us</a></li>
+              <li><a href="#about"></a></li>
+              <li><a href="#clients">Halaman 1</a></li>
+              <li><a href="#services">Halaman 2</a></li>
+              <li><a href="#portfolio">Halaman 3</a></li>
+              <li><a href="#contact">Halaman 4</a></li>
             </ul>
           </div>
         </div>
@@ -44,226 +49,116 @@
     <!-- end navbar -->
     <!-- side nav -->
     <ul class="sidenav" id="mobile-nav">
-      <li><a href="">About Us</a></li>
-      <li><a href="">Clients</a></li>
-      <li><a href="">Services</a></li>
-      <li><a href="">Portfolio</a></li>
-      <li><a href="">Contact Us</a></li>
+      <li><a href="#about"></a></li>
+      <li><a href="#halaman1">Halaman 1</a></li>
+      <li><a href="#halaman2">Halaman 2</a></li>
+      <li><a href="#portfolio">Halaman 3</a></li>
+      <li><a href="#contact">Halaman 4</a></li>
     </ul>
     <!-- end side nav -->
-    <!-- slider -->
-    <div id="slider"class="slider scrollspy">
-      <ul class="slides">
-        <li>
-          <img src="img/slider/1.png" />
-          <!-- random image -->
-          <div class="caption left-align">
-            <h3>This is our big Tagline!</h3>
-            <h5 class="light grey-text text-lighten-3">
-              Here's our small slogan.
-            </h5>
-          </div>
-        </li>
-        <li>
-          <img src="img/slider/2.png" />
-          <!-- random image -->
-          <div class="caption right-align">
-            <h3>This is our big Tagline!</h3>
-            <h5 class="light grey-text text-lighten-3">
-              Here's our small slogan.
-            </h5>
-          </div>
-        </li>
-        <li>
-          <img src="img/slider/3.png" />
-          <!-- random image -->
-          <div class="caption center-align">
-            <h3>This is our big Tagline!</h3>
-            <h5 class="light grey-text text-lighten-3">
-              Here's our small slogan.
-            </h5>
-          </div>
-        </li>
-      </ul>
-    </div>
-    <!-- end slider -->
-    <!-- about us -->
-    <section class="about scrollspy" id="about">
-      <div class="container">
-        <div class="row">
-          <h3 class="center light grey-text text-darken-3">About Us</h3>
-          <div class="col m6 light">
-            <h5>We Are Professionals</h5>
-            <p>
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ratione
-              saepe odio alias ipsam quod doloribus corporis ducimus totam
-              voluptate deserunt dolorem, qui mollitia, amet eius illo! Voluptas
-              odit a eaque.
-            </p>
-          </div>
-          <div class="col m6 light">
-            <p>Event Barcode Management System</p>
-            <div class="progress">
-              <div class="determinate" style="width: 95%"></div>
-            </div>
-            <p>Micro Site Event</p>
-            <div class="progress">
-              <div class="determinate" style="width: 80%"></div>
-            </div>
-            <p>Web Development</p>
-            <div class="progress">
-              <div class="determinate" style="width: 70%"></div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- end about us -->
-    <!-- our clients -->
-    <div id="clients" class="parallax-container scrollspy">
-      <div class="parallax"><img src="img/slider/4.png" /></div>
+    <!-- our halaman1 -->
+    <div id="halaman1" class="parallax-container scrollspy">
+      <div class="parallax"><img src="img/photo/1.jpg" /></div>
       <div  class="container clients">
-        <h3 class="center light white-text">Our Clients</h3>
-        <div class="row">
-          <div class="col m4 s12 center">
-            <img src="img/clients/gojek.png" />
-          </div>
-          <div class="col m4 s12 center">
-            <img src="img/clients/PERTAMINA.png" />
-          </div>
-          <div class="col m4 s12 center">
-            <img src="img/clients/traveloka.png" />
-          </div>
-        </div>
+        <img src="img/photo/utama1.png" alt="">
+       
       </div>
     </div>
     <!-- end clients -->
-    <!-- services -->
-    <section id="services" class="services scrollspy">
-      <div class="container">
-        <div class="row">
-          <h3 class="light center grey-text text-darken-3">Our Services</h3>
-          <div class="col m4 s12">
-            <div class="card-panel center">
-              <i class="material-icons medium">assignment</i>
-              <h5>Registration system</h5>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto,
-                quis?
-              </p>
-            </div>
-          </div>
-          <div class="col m4 s12">
-            <div class="card-panel center">
-              <i class="material-icons medium">devices</i>
-              <h5>Micro Site Event</h5>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto,
-                quis?
-              </p>
-            </div>
-          </div>
-          <div class="col m4 s12">
-            <div class="card-panel center">
-              <i class="material-icons medium">desktop_windows</i>
-              <h5>Web Development</h5>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto,
-                quis?
-              </p>
-            </div>
-          </div>
-        </div>
+    <!-- halaman2 -->
+  <div id="halaman2" class="parallax-container scrollspy">
+      <div class="parallax"><img src="img/photo/4.jpg" /></div>
+      <div  class="container halaman2">
+        <span class="black-text center text-darken-3">Bissmillaahirrahmaanirrahiim<br>Assalaamu'alaikum Warahmatullahi Wabarakatuh <br><br> Dengan rahmat dan ridho Allah SWT, kami bermaksud menyelenggarakan<br> Resepsi Pernikahan putra-putri kami</span>
+        <h2 class="yellow-text center text-darken-3">DEVI AYU AGUSTIN</h2>
+        <span class="black-text center text-darken-3">Putri dari Bpk. Agus Yulianto & Ibu Umyati</span><br>
+        <span class="black-text center text-darken-3">Dengan</span>
+        <h2 class="yellow-text center text-darken-3">Muhammad Umar Baihaqi</h2>
+        <span class="black-text center text-darken-3">Putra dari Bpk. Andesty Husein & Almh. Ibu Siti Khodijah</span>
+        <br>
+        <span class="black-text center text-darken-3">YANG IN SHAA ALLAH AKAN DI SELENGGARAKAN PADA: </span>
+        <br>
+        <span class="black-text center text-darken-3"> SABTU, 22 JULI 2023</span>
+        <span class="black-text center text-darken-3"> PUKUL 14.00 - 17.00 WIB</span>
+        <span class="black-text center text-darken-3"> WISMA KEMENPORA</span>
+        <span class="black-text center text-darken-3"> JAKARTA PUSAT</span>
+        <br>
+        <span class="black-text center text-darken-3">Merupakan suatu kehormatan dan kebahagiaan bagi kami apabila Bapak/Ibu/Saudara/i berkenan hadir untuk memberikan doa restu kepada putra-putri kami</span>
+        <br>
+        <span class="black-text center text-darken-3">Wassalaamu'alaikum Warahmatullahi Wabarakaatuh</span>
+        <br>
       </div>
-    </section>
-    <!-- end services -->
+      <br>
+      <div class="ortu" style="display: flex; align-items: center; justify-content: space-around; font-size: 15px;">
+      <div class="kel1" style="display: flex; flex-direction: column; align-items: flex-start;">
+        <span class="black-text center text-darken-3">BPK. AGUS YULIANTO</span>
+        <span class="black-text center text-darken-3">ALMH. IBU UMYATI</span>
+      </div>
+      <div class="kel2" style="display: flex; flex-direction: column; align-items: flex-start;">
+        <span class="black-text center text-darken-3">BPK. ANDESTY HUSEIN</span>
+        <span class="black-text center text-darken-3">IBU SITI KHODIJAH</span>
+      </div>
+      </div>
+      <br>
+      <br>
+    </div>
+    <!-- end halaman2 -->
     <!-- portfolio -->
     <section id="portfolio" class="portfolio scrollspy">
       <div class="container">
-        <h3 class="light center grey-text text-darken-3">Portfolio</h3>
+        <h3 class="light center grey-text text-darken-3">Photo</h3>
         <div class="row">
           <div class="col m3 s12">
             <img
-              src="img/portfolio/1.png"
+              src="img/photo/1.jpg"
               class="responsive-img materialboxed"
             />
           </div>
           <div class="col m3 s12">
             <img
-              src="img/portfolio/2.png"
+            src="img/photo/2.jpg"
+            class="responsive-img materialboxed"
+          />
+          </div>
+          <div class="col m3 s12">
+            <img
+              src="img/photo/3.jpg"
               class="responsive-img materialboxed"
             />
           </div>
           <div class="col m3 s12">
             <img
-              src="img/portfolio/3.png"
-              class="responsive-img materialboxed"
-            />
-          </div>
-          <div class="col m3 s12">
-            <img
-              src="img/portfolio/4.png"
-              class="responsive-img materialboxed"
-            />
+            src="img/photo/4.jpg"
+            class="responsive-img materialboxed"
+          />
           </div>
         </div>
-        <div class="row">
-          <div class="col m3 s12">
-            <img
-              src="img/portfolio/5.png"
-              class="responsive-img materialboxed"
-            />
-          </div>
-          <div class="col m3 s12">
-            <img
-              src="img/portfolio/6.png"
-              class="responsive-img materialboxed"
-            />
-          </div>
-          <div class="col m3 s12">
-            <img
-              src="img/portfolio/1.png"
-              class="responsive-img materialboxed"
-            />
-          </div>
-          <div class="col m3 s12">
-            <img
-              src="img/portfolio/2.png"
-              class="responsive-img materialboxed"
-            />
-          </div>
-        </div>
+        
       </div>
     </section>
     <!-- end portfolio -->
+       <!-- our Map -->
+       <section id="map" class="map grey lighten-3 scrollspy">
+        <div class="container">
+          <h3 class="light center grey-text text-darken-3">Tempat Acara</h3>
+          <div class="map">
+            <div class="col m7 s12">
+              <a href="https://goo.gl/maps/2hh6AVqHdMCZpsBr6" target=" __blank"><img src="img/photo/map.png" alt="Hotel" class="img-fluid" width="100%"></a>
+            </div>
+          </div>
+        </div>
+      </section>
+   
+      <!-- end Map -->
     <!-- contact us -->
     <section id="contact" class="contact grey lighten-3 scrollspy">
       <div class="container">
-        <h3 class="light center grey-text text-darken-3">Contact Us</h3>
-        <div class="row">
-          <div class="col m5 s12">
-            <div class="card-panel blue darken-2 center white-text">
-              <i class="material-icons medium">email</i>
-              <h5>Contact</h5>
-              <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus,
-                voluptates?
-              </p>
-            </div>
-            <ul class="collection with-header">
-              <li class="collection-header"><h4>Our Office</h4></li>
-              <li class="collection-item">CV. Aldhiya Tama Solusi</li>
-              <li class="collection-item">
-                Jl. Manunggal Bakti RT.08/011 Kalisari, Jakarta 13790
-              </li>
-              <li class="collection-item">Telp. 021-98562325</li>
-              <li class="collection-item">Fax. 021-87708561</li>
-            </ul>
-          </div>
+        <h3 class="light center grey-text text-darken-3">Kartu Ucapan</h3>
+        <div class="ucapan">
           <div class="col m7 s12">
             <form action="">
               <div class="card-panel form">
-                <h5>Harap Di Isi Form Berikut Ini</h5>
+                <h5 class="center">Berikan Ucapan Terbaik Untuk Kedua Mempelai</h5>
                 <div class="input-field">
                   <input type="text" id="name" name="name" required class="validate"/>
                   <label for="name">Nama</label>
@@ -289,8 +184,9 @@
       </div>
     </section>
     <!-- end contact us -->
+   
     <!-- footer -->
-    <footer class="blue darken-2 white-text center">
+    <footer class="pink darken-2 white-text center">
         <p class="flow-text">Aldhiya Tama Solusi .Copyright 2023</p>
     </footer>   
     <!--JavaScript at end of body for optimized loading-->
